# EmptyAVLProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear_build.sh
sources/: main.cpp
